fix: svg placement on iOS

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -6,5 +6,6 @@
 
 .icon {
     width: 20px;
-    margin-right: 5px;
+    max-height: 20px;
+    margin-right: 3px;
 }
